--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -1,51 +1,63 @@
-<div class="custom-login-container">
-    <div class="bg"></div>
-    <div class="row d-flex justify-content-center align-items-center login-height">
-        <div class="col-md-9 col-lg-6 col-xl-5">
-            <img src="\images\img\5L_logo-white2.png"
-            class="img-fluid" alt="Sample image">
-        </div>
-        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-            <form>
+<section class="h-100">
+    <div class="container login-py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-10">
+                <div class="card rounded-3 text-black">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4">
 
-            <div class="d-flex justify-content-center mb-4">
-                <img src="\images\img\pngwing.com.png" class="img-fluid h-25 w-25 display-custom" alt="Sample image">
-            </div>
+                                <div class="text-center">
+                                    <img src="/images/img/5L_logo-Red.png" style="width: 220px; height: 140px;"
+                                        alt="logo">
+                                    <h4 class="mt-1 mb-5 pb-1">Welcome to 5L Solutions <br> Control Panel</h4>
+                                </div>
 
-            <!-- Email input -->
-            <div class="form-outline mb-4 custom-mobile-responsive">
-                <label class="form-label text-white" for="form3Example3">Username</label>
-                <input type="username" id="username" name="username" class="form-control form-control-lg"
-                placeholder="Enter Username" />
-            </div>
+                                <p>Please login to your account</p>
 
-            <!-- Password input -->
-            <div class="form-outline mb-3 custom-mobile-responsive">
-                <label class="form-label text-white" for="form3Example4">Password</label>
-                <input type="password" id="password" name="password" class="form-control form-control-lg"
-                placeholder="Enter password" />
-            </div>
+                                <div class="form-outline mb-2">
+                                    <input type="username" id="username" name="username" class="form-control"
+                                        placeholder="Enter Your User Name" />
+                                    <label class="form-label" for="username">Username</label>
+                                </div>
 
-            <div class="d-flex justify-content-between align-items-center custom-mobile-responsive">
-                <!-- Checkbox -->
-                <div class="form-check mb-0">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                <label class="form-check-label text-white" for="form2Example3">
-                    Remember me
-                </label>
+                                <div class="form-outline mb-4">
+                                    <input type="password" id="password" name="password" class="form-control"
+                                        placeholder="Enter Your Password" />
+                                    <label class="form-label" for="password">Password</label>
+                                </div>
+
+                                <div class="text-center pt-1 mb-4 pb-1">
+                                    <button class="btn btn-outline-inventory-lighter btn-block  mb-3" id="loginBtn"
+                                        style="font-size: 1.15rem;" type="button">Log in
+                                    </button>
+                                    <a class="text-muted" href="#!">Forgot password?</a>
+                                </div>
+
+                                <div class="d-flex align-items-center justify-content-center pb-4">
+                                    <p class="mb-0 me-2">Don't have an account? <a href="#!"
+                                            class="bmss-link">Register</a></p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                <h4 class="mb-4 text-center">We are more than just a Company</h4>
+                                <p class="mb-0" style="text-align: justify; text-indent: 25px; font-size: 0.875rem;">A dynamic and forward-thinking company dedicated to providing
+                                    comprehensive solutions in the realm of supplies and allied services. Specializing
+                                    in a wide range of industries, the company is committed to meeting the diverse needs
+                                    of its clients through innovative and efficient approaches. With a focus on quality,
+                                    reliability, and customer satisfaction, 5L Solutions aims to be a trusted partner in
+                                    delivering tailored solutions for procurement, logistics, and allied services. The
+                                    company thrives on a foundation of professionalism, integrity, and a proactive
+                                    mindset, ensuring it stays at the forefront of its field and consistently exceeds
+                                    the expectations of its clientele.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <a href="#!" class="text-white">Forgot password?</a>
             </div>
-
-            <div class="text-center text-lg-start mt-4 pt-2">
-                <button type="button" id="loginBtn" class="btn btn-outline-inventory-lighter shadow-sm text-white btn-lg"
-                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                <p class="small fw-bold mt-2 pt-1 mb-0 text-white">Don't have an account? <a href="#!"
-                    class="bmss-link">Register</a></p>
-            </div>
-
-            </form>
         </div>
     </div>
-</div>
-    
+</section>
