--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -298,6 +298,7 @@
         $('#search-input').on('input', filterTableRows);
 
         function populatedatatable(data) {
+            console.log(data)
             const tableBody = $('#productinventory-datatable tbody');
             tableBody.empty();
 
