--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -115,7 +115,7 @@
       aria-controls="collapseTransactions"
     >
       <i class="fas fa-hand-holding-usd"></i>
-      <span class="text-white">Sales Management</span>
+      <span class="text-white">Sales</span>
     </a>
     <div
       id="collapseTransactions"
@@ -158,7 +158,7 @@
       aria-controls="collapseInventory"
     >
       <i class="fas fa-boxes"></i>
-      <span class="text-white">Inventory Management</span>
+      <span class="text-white">Inventory</span>
     </a>
     <div
       id="collapseInventory"
@@ -203,7 +203,7 @@
       aria-controls="collapseRequest"
     >
       <i class="fas fa-handshake"></i>
-      <span class="text-white">Procurement Management</span>
+      <span class="text-white">Procurement</span>
     </a>
     <div
       id="collapseRequest"
@@ -236,7 +236,7 @@
       aria-controls="collapseProduction"
     >
       <i class="fab fa-product-hunt"></i>
-      <span class="text-white">Production Management</span>
+      <span class="text-white">Production</span>
     </a>
     <div
       id="collapseProduction"
@@ -281,7 +281,7 @@
       aria-controls="collapsePromoDiscount"
     >
       <i class="fas fa-tags"></i>
-      <span class="text-white">Promo & Discount Management</span>
+      <span class="text-white">Promo & Discount</span>
     </a>
     <div
       id="collapsePromoDiscount"
