--- a/public/stylesheets/css/sb-admin-2.css
+++ b/public/stylesheets/css/sb-admin-2.css
@@ -2355,7 +2355,7 @@ fieldset:disabled a.btn {
   pointer-events: none;
 }
 
-.btn-primary {
+/* .btn-primary {
   color: #fff;
   background-color: #4e73df;
   border-color: #4e73df;
@@ -2365,7 +2365,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #2e59d9;
   border-color: #2653d4;
-}
+} */
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
