--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -32,12 +32,42 @@
   
   --fw-700: '700';
 }
+/* Date Range */
+.daterangepicker td.active, .daterangepicker td.active:hover {
+  background-color: var(--clr-6) !important;
+}
+
+.custom-br-left{
+  border-radius: 0.35rem 0 0 0.35rem !important;
+}
+
+.custom-br-right{
+  border-radius: 0 0.35rem 0.35rem 0 !important;
+}
+
+.form-control[readonly]{
+  background-color: transparent !important;
+}
+
+.daterangepicker .ranges li.active {
+  background-color: var(--clr-6) !important;
+}
+
 /* .form-control:disabled{
   background-color: white !important;
   border: none !important;
 } */
 
 /* Font Styling */
+
+.login-py-5{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.gradient-custom-2 {
+  background: rgb(52,177,170);
+}
 
 .custom-mt{
   margin-top: 10px !important;
@@ -85,7 +115,7 @@
 }
 
 .dashboard-size{
-  height: 453px;
+  height: 432px;
 }
 
 .padding-fix{
@@ -308,6 +338,15 @@ a {
 }
 
 /* Text STYLE */
+.dashboard-option{
+  border: 1px solid;
+  color: var(--clr-6) !important;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  color: white !important;
+  background-color: var(--clr-6) !important;
+}
 
 .text-white{
   color: var(--clr-font-white) !important;
@@ -425,7 +464,7 @@ td{
   }
 
   .mobile-hidden{
-    display: none;
+    display: none !important;
   }
 
   .modal{
@@ -507,12 +546,17 @@ td{
       margin-bottom: 10px;
     }
     
-    body{
-      padding: .8rem .8rem 0rem 0rem;
+    #wrapper{
+      padding: .8rem 0.8rem 0rem 0rem;
     }
     
     .sidebar{
       border-radius: 0 0.275rem 0.275rem 0;
+    }
+
+    .login-py-5{
+      padding-top: 0.375rem;
+      padding-bottom: 0.375rem;
     }
 }
 
