--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-inventory" id="closeBtn" data-dismiss="modal">Close</button>
                 <button type="button" id="updateBtn" class="btn btn-outline-inventory">Update</button>
             </div>
         </div>
@@ -74,47 +74,47 @@
         </div>
     </div>
 
-<div class="card  mb-4 table-size">
-    <div class="progress progress-sm mb-2">
-        <div class="progress-bar" role="progressbar" style="width: 0%"
-            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="card-header py-3 header-bg">
-        <div class="row">
-            <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Access Data:</h6>
-            </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
+    <div class="card  mb-4 table-size">
+        <div class="progress progress-sm mb-2">
+            <div class="progress-bar" role="progressbar" style="width: 0%"
+                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="card-header py-3 header-bg">
+            <div class="row">
+                <div class="col-md-6">
+                    <h6 class="mt-2 font-weight-bold table-title">Access Data:</h6>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small"
+                            placeholder="Search for..." aria-label="Search"
+                            aria-describedby="basic-addon2" id="search-input">
+                        <div class="input-group-append">
+                            <button class="btn sis-btn-color" type="button" id="search-button">
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered custom-mobile-table" id="access-table" width="100%" cellspacing="10">
-                <thead class="table-header">
-                    <tr>
-                        <th class = "col-1">Access Code</th>
-                        <th class = "col-3">Access Name</th>
-                        <th class = "col-2">Created by</th>
-                        <th class = "col-2">Created date</th>
-                        <th class = "col-2">Status</th>
-                        <th class = "col-1">Action</th>               
-                    </tr>
-                </thead>
+        <div class="card-body">
+            <div class="table-responsive scrollable-table-container">
+                <table class="table table-bordered custom-mobile-table" id="access-table" width="100%" cellspacing="10">
+                    <thead class="table-header">
+                        <tr>
+                            <th class = "col-1">Access Code</th>
+                            <th class = "col-3">Access Name</th>
+                            <th class = "col-2">Created by</th>
+                            <th class = "col-2">Created date</th>
+                            <th class = "col-2">Status</th>
+                            <th class = "col-1">Action</th>               
+                        </tr>
+                    </thead>
 
-                <tbody>
-                </tbody>
-            </table>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
