--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -1,6 +1,7 @@
 <script>
     $(document).ready(function () {
 
+
         $('#dateRange').daterangepicker({
             opens: 'right',
             startDate: moment().subtract(7, 'days'), 
@@ -18,16 +19,19 @@
             alwaysShowCalendars: true,
             showCustomRangeLabel: false,
             buttonClasses: ['btn btn-outline-inventory'],
-            });
+            locale: {
+                format: 'MMM D, YYYY'
+            }
+        });
 
-            $('#adjustDateBackward').on('click', function() {
+        $('#adjustDateBackward').on('click', function() {
             var startDate = $('#dateRange').data('daterangepicker').startDate;
             var endDate = $('#dateRange').data('daterangepicker').endDate.clone().subtract(7, 'days');
             $('#dateRange').data('daterangepicker').setEndDate(endDate);
             $('#dateRange').data('daterangepicker').setStartDate(startDate.clone().subtract(7, 'days'));
-            });
+        });
 
-            $('#adjustDateForward').on('click', function() {
+        $('#adjustDateForward').on('click', function() {
             var startDate = $('#dateRange').data('daterangepicker').startDate;
             var endDate = $('#dateRange').data('daterangepicker').endDate.clone().add(7, 'days');
             $('#dateRange').data('daterangepicker').setStartDate(startDate.clone().add(7, 'days'));
@@ -62,9 +66,63 @@
             }
         });
 
-        $(document).on('click', '#top-sellers-tab', function() {
-            getData(initialdate);
-        });
+        // $(document).on('click', '#top-sellers-tab', function() {
+        //     getData(initialdate);
+        // });
+
+        function populateDataTable(data) {
+            console.log("Details: ", data);
+            const mergedData = {};
+            let overallTotalPrice = 0;
+
+            const tableBody = document.querySelector('#sales-table tbody');
+
+            while (tableBody.firstChild) {
+                tableBody.removeChild(tableBody.firstChild);
+            }
+
+            if (data.length === 0) {
+                const noDataRow = tableBody.insertRow();
+                const noDataCell = noDataRow.insertCell(0);
+                noDataCell.colSpan = 3;
+                noDataCell.textContent = "No Data Found";
+                $('.overallTotal').text(formatCurrency(0));
+                return;
+            }
+
+            data.forEach(item => {
+                const parsedItem = JSON.parse(item.st_description);
+
+                parsedItem.forEach(product => {
+                    const { name, price, quantity } = product;
+
+                    if (mergedData[name]) {
+                        mergedData[name].quantity += quantity;
+                        mergedData[name].price += price * quantity;
+                    } else {
+                        mergedData[name] = { quantity, price: price * quantity };
+                    }
+                    overallTotalPrice += price * quantity;
+                    $('.overallTotal').text(formatCurrency(overallTotalPrice));
+                });
+            });
+
+            const sortedProducts = Object.entries(mergedData)
+                .map(([productName, productDetails]) => ({ productName, ...productDetails }))
+                .sort((a, b) => b.quantity - a.quantity);
+
+            for (const product of sortedProducts) {
+                const newRow = tableBody.insertRow();
+
+                const nameCell = newRow.insertCell(0);
+                const priceCell = newRow.insertCell(1);
+                const quantityCell = newRow.insertCell(2);
+
+                nameCell.textContent = product.productName;
+                priceCell.textContent = formatCurrency(product.price);
+                quantityCell.textContent = product.quantity;
+            }
+        }
 
         function processSalesData(data) {
             const items = {};
@@ -86,6 +144,7 @@
             const aggregatedItems = Object.values(items);
 
             aggregatedItems.sort((a, b) => b.totalQuantity - a.totalQuantity);
+            console.log("AggregatedItems: ", aggregatedItems);
 
             const topItems = aggregatedItems.slice(0, 5);
 
@@ -93,6 +152,9 @@
         }
 
         function getData(daterange){
+            let startDate = moment(daterange.split(' - ')[0], 'MMM D, YYYY').format('MM/DD/YYYY');
+            let endDate = moment(daterange.split(' - ')[1], 'MMM D, YYYY').format('MM/DD/YYYY');
+            let formattedDate = startDate + ' - ' + endDate;
             if(daterange == ''){
                 warning('Error', 'No Date Found')
             } else{
@@ -100,10 +162,12 @@
                     type: 'POST',
                     url: '/salesdetails/getdescription',
                     data: {
-                        daterange: daterange,
+                        daterange: formattedDate,
                     },
                     success: function (result) {
+                        console.log(result.data)
                         if (result.msg == 'success') {
+                            populateDataTable(result.data);
                             const topSalesItems = processSalesData(result.data);
                             if (topSalesItems && topSalesItems.length > 0) {
                                 const labels = topSalesItems.map(item => item.name);
