--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -81,36 +81,39 @@
     </div>
     
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-lg-12">
             <div class="card">
                 <div class="card-header">
-                    <ul class="nav nav-pills" id="pills-tab" role="tablist">
-                        <div class="col-3">
+                    <div class="row mb-2 justify-content-center">
+                        <div class="responsive-col">
                             <div class="input-group">
                                 <button id="adjustDateBackward" class="btn btn-outline-inventory custom-br-left"><i class="fas fa-caret-left"></i></button>
                                 <input id="dateRange" name="dateRange" type="text" class="form-control text-center" placeholder="Select Date Range" aria-describedby="basic-addon1" readonly>
                                 <button id="adjustDateForward" class="btn btn-outline-inventory custom-br-right"><i class="fas fa-caret-right"></i></button>
                             </div> 
                         </div>   
-                        <li class="nav-item col text-center">
+                    </div>
+                    <ul class="nav nav-pills" id="pills-tab" role="tablist">
+
+                        <li class="nav-item col text-center mb-1">
                           <a class="nav-link dashboard-option active" id="top-sellers-tab" data-toggle="pill" href="#top-sellers" role="tab" aria-controls="top-sellers" aria-selected="true">Top Sellers</a>
                         </li>
-                        <li class="nav-item col text-center">
-                          <a class="nav-link dashboard-option" id="sales-per-employee-tab" data-toggle="pill" href="#sales-per-employee" role="tab" aria-controls="sales-per-employee" aria-selected="false">Sales Per Employee</a>
+                        <li class="nav-item col text-center mb-1">
+                          <a class="nav-link dashboard-option" id="sales-per-employee-tab" data-toggle="pill" href="#sales-per-employee" role="tab" aria-controls="sales-per-employee" aria-selected="false">Employee</a>
                         </li>
-                        <li class="nav-item col text-center">
+                        <li class="nav-item col text-center mb-1">
                           <a class="nav-link dashboard-option" id="reports-tab" data-toggle="pill" href="#reports" role="tab" aria-controls="reports" aria-selected="false">Reports</a>
                         </li>
-                        <li class="nav-item col text-center">
-                            <a class="nav-link dashboard-option" id="yearly-sales-tab" data-toggle="pill" href="#yearly-sales" role="tab" aria-controls="yearly-sales" aria-selected="false">Sales Per Year</a>
+                        <li class="nav-item col text-center mb-1">
+                            <a class="nav-link dashboard-option" id="yearly-sales-tab" data-toggle="pill" href="#yearly-sales" role="tab" aria-controls="yearly-sales" aria-selected="false">Yearly Sales</a>
                         </li>
                     </ul>
                 </div>
                 <div class="card-body">
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="top-sellers" role="tabpanel" aria-labelledby="top-sellers-tab">
-                            <div class="row">
-                                <div class="col-8 padding-fix">
+                            <div class="row d-flex">
+                                <div class="col padding-fix">
                                     <div class="asvesti-border">
                                         <div class="card dashboard-size">
                                             <div class="card-header py-3 header-bg">
@@ -127,7 +130,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-4">
+                                <div class="col">
                                     <div class="card  mb-4 table-size-sm">
                                         <div class="card-header py-3 header-bg">
                                             <div class="row">
@@ -144,9 +147,9 @@
                                                 <table class="table table-bordered custom-mobile-table" id="sales-table" width="100%" cellspacing="10">
                                                     <thead class="table-header">
                                                         <tr>
-                                                            <th class = "col-1">Name</th>
+                                                            <th class = "col-6">Name</th>
                                                             <th class = "col-3">Price</th>
-                                                            <th class = "col-2">Total Sold</th>        
+                                                            <th class = "col-3">Total Sold</th>        
                                                         </tr>
                                                     </thead>
                                     
